[package]
name = "pawn-env"
version = "0.1.0"
authors = ["dakyskye <lashakanteladze339@protonmail.com>"]
edition = "2018"

[lib]
name = "pawn_env"
crate-type = ["cdylib"]

[dependencies]
samp = {git="https://github.com/ZOTTCE/samp-rs/",branch="async-amx",features = ["async"]}
log = "0.4.6"
fern = "0.5.7"
